Upload before implementing CurrentUserAdvice. Threats: issues with Thymeleaf templates due to missing authentication interface as CurrentUserAdvice is for replacing its usage to determine logged user.